fix: update navbar look

--- a/apps/nextjs/src/app/globals.css
+++ b/apps/nextjs/src/app/globals.css
@@ -39,6 +39,7 @@
     --background: 20 14.3% 6.1%;
     --foreground: 0 0% 95%;
     --card: 240 2% 10%;
+    --card-darker: 0 2% 7%;
     --card-foreground: 0 0% 95%;
     --popover: 0 0% 9%;
     --popover-foreground: 0 0% 95%;
