--- a/apps/nextjs/src/app/globals.css
+++ b/apps/nextjs/src/app/globals.css
@@ -39,7 +39,8 @@
     --background: 20 14.3% 6.1%;
     --foreground: 0 0% 95%;
     --card: 240 2% 10%;
-    --card-darker: 0 2% 7%;
+    --card-lighter: 240 2% 12%;
+    --card-darker: 240 2% 7%;
     --card-foreground: 0 0% 95%;
     --popover: 0 0% 9%;
     --popover-foreground: 0 0% 95%;
