chore: lots of ui refactors + ui for add exercises modal now set up

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,10 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --color-card: var(--card);
+  --color-card-lighter: var(--card-lighter);
+  --color-card-darker: var(--card-darker);
+  --color-card-foreground: var(--card-foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
